--- a/Harrys_Gym_Squat.html
+++ b/Harrys_Gym_Squat.html
@@ -6,7 +6,16 @@
 	<link rel='stylesheet' href='Harrys_Gym_CSS.css' title='Harrys_Gym_Homepage' media='screen' />
 </head>
 
-
+<header>
+    <img src="Harrys Gym Guide.jpg" alt="Harrys Gym Guide" style="width:1280px;height:200px;"> 
+</header>
+<nav>
+    <ul>
+        <li><a href="Harrys_Gym_Squat.html">Squat</a></li>
+        <li><a href="Harrys_Gym_Deadlift.html">Deadlift</a></li>
+        <li><a href="Harrys_Gym_BenchPress.html">Bench Press</a></li>
+      </ul>
+</nav>
 <body>
 <p>
     <img src="Tren Twins Squat.jpg" alt="Tren Twins Squat" style="width:1280px;height:600px;"> 
@@ -87,7 +96,8 @@
 </ol>
     
 </p>
-
+<footer>
+    <p>&copy: Harrison Bennett</p>
+</footer>
 </body>
-
 </html>
