--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>Harrys Gym Website</title>
+	<link rel='stylesheet' href='Harrys_Gym_CSS.css' title='Harrys_Gym_Homepage' media='screen' />
+</head>
+
 <header>
     <img src="Harrys Gym Guide.jpg" alt="Harrys Gym Guide" style="width:1280px;height:200px;"> 
 </header>
@@ -8,3 +16,10 @@
         <li><a href="Harrys_Gym_BenchPress.html">Bench Press</a></li>
       </ul>
 </nav>
+<body>
+
+<footer>
+    <p>&copy: Harrison Bennett</p>
+</footer>
+</body>
+</html>
