--- a/Harrys_Gym_Squat.html
+++ b/Harrys_Gym_Squat.html
@@ -11,6 +11,7 @@
 </header>
 <nav>
     <ul>
+        <li><a href="Index.html">Home</a></li>
         <li><a href="Harrys_Gym_Squat.html">Squat</a></li>
         <li><a href="Harrys_Gym_Deadlift.html">Deadlift</a></li>
         <li><a href="Harrys_Gym_BenchPress.html">Bench Press</a></li>
